k8s/nginx/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      imagePullSecrets:
      - name: docker-creds
      securityContext:
        runAsUser: 0
      serviceAccountName: apps
      containers:
      - image: docker.apps.openshift-1.blierop.com/nginx
        name: nginx
        ports:
        - containerPort: 80
